[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/under_counter_fridge.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/util/SpatialLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://level/Fridge.gd" type="Script" id=4]
[ext_resource path="res://game/Activity.gd" type="Script" id=5]

[sub_resource type="Resource" id=1]
script = ExtResource( 5 )
duration = 5.0
outcome_temper_delta = 5.0
displayed_name = "Have a cold beverage"

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.754747, 0.422994, 0.379959 )

[node name="Fridge" type="Area"]
script = ExtResource( 4 )
activity_cold_beverage = SubResource( 1 )

[node name="under_counter_fridge_exportPrep" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.444968, 0 )
shape = SubResource( 2 )

[node name="ActivityLocations" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Position3D" type="Position3D" parent="ActivityLocations"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0.9 )

[node name="Togglables" type="Spatial" parent="."]

[node name="SpatialLabel" parent="Togglables" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
